# quorate

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  quorate.env.op
assays/: test_api.py  test_benchmark.py  test_brainstorm.py  test_cli.py  test_config.py  test_council.py  test_council_seat_assay.py  test_heavyskill.py  test_judge_assay.py  test_persona.py  test_quick.py  test_runlog.py
docs/: model-role-governance.md
docs/experiments/: 2026-07-16-brainstorm-mode.md  2026-07-16-deepseek-seat-selection.md  2026-07-16-judge-role-selection.md  2026-07-17-fable-vs-gpt-judge-assay.md  2026-07-17-k3-downstream-replay.md  2026-07-17-k3-vs-k2.6-council-seat.md  2026-07-17-kimi-subscription-terms.md  2026-07-17-subscription-cli-isolation.md
scripts/: install-local.sh  monthly-benchmark.sh
src/quorate/: __init__.py  __main__.py  api.py  benchmark.py  cli.py  config.py  council_seat_assay.py  heavyskill.py  judge_assay.py  prompts.py  runlog.py
src/quorate/modes/: brainstorm.py  council.py  quick.py
