[project]
name = "quorate"
version = "0.1.0"
description = "Multi-model deliberation CLI — frontier LLMs debate, then judge"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "cyclopts>=4.0",
    "httpx>=0.28",
    "rich>=13",
]

[project.scripts]
quorate = "quorate.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quorate"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "RUF"]
